--- a/src/components/GetCode.module.css
+++ b/src/components/GetCode.module.css
@@ -25,8 +25,12 @@
 
 .paragraph {
   font-size: 16px;
+  font-weight: 300;
   margin: 0;
   margin-bottom: 24px;
+  padding-left: 24px;
+  padding-right: 24px;
+  line-height: 24px;
 }
 
 .button {
