--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -4,4 +4,42 @@
   letter-spacing: -0.025em;
   color: #fff;
   margin-bottom: 48px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.bannerFinger {
+  height: 44px;
+  margin-left: 8px;
+  animation: move-finger;
+  animation-duration: 2.5s;
+  animation-iteration-count: infinite;
+  transform-origin: 70% 70%;
+}
+
+@keyframes move-finger {
+  0% {
+    transform: rotate(0.0deg);
+  }
+  10% {
+    transform: rotate(14.0deg);
+  }
+  20% {
+    transform: rotate(-8.0deg);
+  }
+  30% {
+    transform: rotate(14.0deg);
+  }
+  40% {
+    transform: rotate(-4.0deg);
+  }
+  50% {
+    transform: rotate(10.0deg);
+  }
+  60% {
+    transform: rotate( 0.0deg);
+  }
+ 100% {
+   transform: rotate( 0.0deg);
+  }
 }
