--- a/src/components/Faq.module.css
+++ b/src/components/Faq.module.css
@@ -2,17 +2,21 @@
   padding-left: 0;
   list-style-type: none;
   margin: 0 10%;
+  flex-grow: 1;
 }
 
 .listItem {
   font-size: 16px;
-  margin-bottom: 12px;
-}
-
-.listItem:first-child {
-  font-size: 18px;
+  margin-bottom: 16px;
+  text-align: left;
 }
 
 .link {
   color: gold;
+}
+
+.header {
+  font-size: 20px;
+  margin: 24px 0 0 0;
+  flex: 1;
 }
